Updating create form

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <h1><i class="fas fa-bucket" style="color: gold;"></i>BucketListers</h1><a href="/login"><i class="fa-solid fa-user" style="text-align: end;"></a></i>
+        <h1><i class="fas fa-bucket" style="color: gold;"></i>BucketListers</h1><a href="/login"><i class="fa-solid fa-user" style="text-align: end; color: black;"></a></i>
     </header>
 
     <main>
