Intergating search functionality by city name

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
 
         <div class="column">
             <img src="https://images.unsplash.com/photo-1527610276295-f4c1b38decc5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTl8fGFkdmVudHVyZXxlbnwwfDF8MHx8fDA%3D%3D" alt="Image 2">
-            <a href="/login">
+            <a href="/bucketlist">
             <div class="image-text">
                 <h1>Share</h1>
             </div>
@@ -38,7 +38,7 @@
 
         <div class="column">
             <img src="https://images.unsplash.com/photo-1611124600582-c9ef0e977585?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTh8fGFkdmVudHVyZXxlbnwwfHwwfHx8MA%3D%3D" alt="Image 3">
-            <a href="/bucketlist">
+            <a href="/bucketlist/cities">
             <div class="image-text">
                 <h1>Explore</h1>
             </div>
