--- a/public/stylesheets/button.css
+++ b/public/stylesheets/button.css
@@ -13,3 +13,10 @@ button {
     cursor: pointer;
     outline: none; /* Remove default focus outline */
 }
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 45px; /* Set the height of your footer */
+    background-color: #f1f1f1; /* Set the background color of your footer */
+}
