--- a/public/stylesheets/stars.css
+++ b/public/stylesheets/stars.css
@@ -162,6 +162,13 @@
       background-size: 30px auto;
     }
   }
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the height of your footer */
+    background-color: #f1f1f1; /* Set the background color of your footer */
+}
   
   @media screen and (-ms-high-contrast: active) {
     .starability-basic {
@@ -196,3 +203,4 @@
     height: auto; /* Maintain aspect ratio */
     border-radius: 10px; /* Optional: Add border-radius for rounded corners */
 }
+
