--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,10 +6,16 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item" style="padding: 4px;">
+                    <a href="/bucketlist/cities" style="text-decoration: none;">
+                    <i class="nav-link active fa-solid fa-magnifying-glass"></i>
+                </a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/bucketlist">Home</a>
                 </li>
-
+                
+                
                 <% if(!currentUser){ %>
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Login</a>
@@ -29,6 +35,7 @@
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
                 <% } %>
+                
             </ul>
         </div>
     </div>
